--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Some background history:
 The Dune Legacy project was originally started by Anthony Cole, then helped out by Raal
 Goff and Martin Reichl before it was abandoned by them. It cointains small segments of
 code greatfully borrowed from Olaf van der Spek's Mixer (dune2 data extraction), and
-Stefen Hendriks' Ultra Dune2(random map generator).
+Stefan Hendriks' Ultra Dune2(random map generator).
 
 Current situation:
 This project was picked up again by Per Øyvind Karlsen (Dvalin) in 2005 after being
